--- a/us.html
+++ b/us.html
@@ -61,17 +61,16 @@
                   patricia_isabel22@msn.com</a
                 >
               </div>
-              <div id="flags" class="flags">
-                <div class="flags_item" data_language="mx">
-                  <img src="images/idioma/mx.svg" alt="" />
-                </div>
-                <div class="flags_item" data_language="us">
-                  <img src="images/idioma/us.svg" alt="" />
-                </div>
-                <div class="flags_item" data_language="fr">
-                  <img src="images/idioma/fr.svg" alt="" />
-                </div>
-              </div>
+              <div class="flags">
+                <a class="flags" href="index.html">
+                  <img src="images/idioma/mx.svg" alt="image" class="img-fluid" />
+                </a>
+                <a class="flags" href="us.html">
+                  <img src="images/idioma/us.svg" alt="image" class="img-fluid" />
+                </a>
+                <a class="flags" href="fr.html">
+                  <img src="images/idioma/fr.svg" alt="image" class="img-fluid" />
+                </a>
               <!-- <div class="flags flags_img flags_item mail-b">
                 <li data-lenguage="mx">
                   <img src="images/idioma/mx.svg" alt="" />
