--- a/en.html
+++ b/en.html
@@ -38,13 +38,6 @@
     <![endif]-->
   </head>
   <body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
-    <!-- LOADER -->
-    <!-- <div id="preloader">
-		<div class="loader">
-			<img src="images/preloader.gif" alt="" />
-		</div>
-    </div>end loader -->
-    <!-- END LOADER -->
 
     <!-- Start top bar -->
     <div class="main-top">
@@ -65,27 +58,12 @@
                 <a class="flags" href="index.html">
                   <img src="images/idioma/mx.svg" alt="image" class="img-fluid" />
                 </a>
-                <a class="flags" href="us.html">
+                <a class="flags" href="en.html">
                   <img src="images/idioma/us.svg" alt="image" class="img-fluid" />
                 </a>
                 <a class="flags" href="fr.html">
                   <img src="images/idioma/fr.svg" alt="image" class="img-fluid" />
                 </a>
-              <!-- <div class="flags flags_img flags_item mail-b">
-                <li data-lenguage="mx">
-                  <img src="images/idioma/mx.svg" alt="" />
-                </li>
-              </div>
-              <div class="flags flags_img flags_item mail-b">
-                <li data-lenguage="us">
-                  <img src="images/idioma/us.svg" alt="" />
-                </li>
-              </div>
-              <div class="flags flags_img flags_item mail-b">
-                <li data-lenguage="fr">
-                  <img src="images/idioma/fr.svg" alt="" />
-                </li>
-              </div> -->
             </div>
           </div>
           <div class="col-lg-6">
@@ -135,14 +113,14 @@
             id="navbar-wd"
           >
             <ul class="navbar-nav">
-              <li><a class="nav-link active" href="#home">home</a></li>
-              <li><a class="nav-link" href="#about">About</a></li>
-              <li><a class="nav-link" href="#services">Services</a></li>
-              <li><a class="nav-link" href="#appointment">Appointment</a></li>
+              <li><a class="nav-link active" href="#home">Inicio</a></li>
+              <li><a class="nav-link" href="#about">Nosotros</a></li>
+              <li><a class="nav-link" href="#services">Servicios</a></li>
+              <li><a class="nav-link" href="#appointment">Cita</a></li>
               <!-- <li><a class="nav-link" href="#gallery">Galeria</a></li>
 						<li><a class="nav-link" href="#team">Doctor</a></li>
                         <li><a class="nav-link" href="#blog">Blog</a></li> -->
-              <li><a class="nav-link" href="#contact">Contact</a></li>
+              <li><a class="nav-link" href="#contact">Contacto</a></li>
             </ul>
           </div>
         </div>
@@ -185,11 +163,6 @@
               data-duration="1500"
               style="background-image: url(images/slider-02.jpg)"
             >
-              <!-- <div class="lbox-caption pogoSlider-slide-element">
-                <div class="lbox-details">
-                  <h1>BIENVENIDO A TÚ MÉDICO</h1>
-                </div>
-              </div> -->
             </div>
           </div>
           <!-- .pogoSlider -->
@@ -214,23 +187,25 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
               <div class="row align-items-center about-main-info">
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                  <h2>Professional Objective</h2>
+                  <h2>Objetivo Profesional</h2>
                   <p>
-                    My main objective is to apply my knowledge and skills for
-                    the benefit of the population, providing quality and warmth
-                    in medical care, being ethical and professional with values
-                    ​​to perform my work in the best way possible; updating
-                    myself for professional and personal growth.
+                    Mi objetivo principal es el aplicar mis conocimientos y
+                    habilidades en beneficio de la población, brindando calidad
+                    y calidez en la atención medica, siendo ética y profesional
+                    con valores para desempeñar mi trabajo de la mejor manera
+                    posible; actualizándome para un crecimiento profesional y
+                    personal.
                   </p>
                   <p>
                     La
-                    <span font size="6" style="color: black">Geriatrics</span>
-                    It is the specialty of medicine dedicated to the study,
-                    prevention, diagnosis, treatment and rehabilitation of
-                    diseases in the
-                    <span font size="6" style="color: black">older adults</span
-                    >, as well as in the primary prevention and detection of
-                    chronic degenerative diseases.
+                    <span font size="6" style="color: black">Geriatría</span> es
+                    la especialidad de la medicina dedicada al estudio,
+                    prevención, diagnóstico, tratamiento y rehabilitación de las
+                    enfermedades en los
+                    <span font size="6" style="color: black"
+                      >adultos mayores</span
+                    >, así como en la prevención primaria y detección de
+                    enfermedades crónico degenerativas.
                   </p>
                   <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
@@ -262,8 +237,8 @@
             <div class="title-box1">
               <h2>Servicios</h2>
               <p style="font-weight: bold; color: black">
-                Provide geriatric and general consultation with quality and
-                warmth.
+                Brindar consulta Geriátrica y consulta general con calidad y
+                calidez.
               </p>
             </div>
           </div>
@@ -276,15 +251,16 @@
                   <div class="service-icon">
                     <i class="fa fa-h-square" aria-hidden="true"></i>
                   </div>
-                  <h3 class="title">General consultation attention</h3>
+                  <h3 class="title">Atención de consulta general</h3>
                   <p style="font-weight: bold" class="description">
                     • Diabetes Mellitus
                   </p>
                   <p style="font-weight: bold" class="description">
-                    • Hypertension
+                    • Hipertensión
                   </p>
                   <p style="font-weight: bold" class="description">
-                    • Infectious: respiratory, urinary, gastrointestinal, STD, etc.
+                    • infecciosas: respiratorias, urinarias ,
+                    Gastrointestinales, ETS, etc.
                   </p>
                 </div>
               </div>
@@ -293,24 +269,24 @@
                   <div class="service-icon">
                     <i class="fa fa-heart" aria-hidden="true"></i>
                   </div>
-                  <h3 class="title">Elderly care</h3>
+                  <h3 class="title">Atención del adulto mayor</h3>
                   <p style="font-weight: bold" class="description">
-                    • Cognitive disorders
+                    • Transtornos cognitivos
                   </p>
                   <p style="font-weight: bold" class="description">
-                    • Healthy aging
+                    • Envejecimiento saludable
                   </p>
                   <p style="font-weight: bold" class="description">
-                    • Arthropathy
+                    • Artropatias
                   </p>
                   <p style="font-weight: bold" class="description">
                     • Osteoporosis
                   </p>
                   <p style="font-weight: bold" class="description">
-                    • Respiratory disorders
+                    • Transtornos respiratorios
                   </p>
                   <p style="font-weight: bold" class="description">
-                    • Falling syndrome
+                    • Síndrome de caídas
                   </p>
                   <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
@@ -320,9 +296,9 @@
                   <div class="service-icon">
                     <i class="fa fa-hospital-o" aria-hidden="true"></i>
                   </div>
-                  <h3 class="title">Botox application</h3>
+                  <h3 class="title">Aplicación de Botox</h3>
                   <p style="font-weight: bold" class="description">
-                    • In the upper third.
+                    • En tercio Superior.
                   </p>
                   <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
@@ -418,9 +394,9 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="title-box">
-              <h2>Appointment</h2>
+              <h2>Citas</h2>
               <p style="font-weight: bold">
-                Fill out this short form to schedule your appointment.
+                Llena este pequeño formulario para agendar tu cita.
               </p>
             </div>
           </div>
@@ -429,14 +405,14 @@
           <div class="col-lg-6 col-md-6">
             <div class="well-block">
               <div class="well-title">
-                <h2>Schedule an Appointment</h2>
+                <h2>Agendar Cita</h2>
               </div>
               <form>
                 <!-- Form start -->
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="control-label" for="name">Name</label>
+                      <label class="control-label" for="name">Nombre</label>
                       <input
                         id="name"
                         name="name"
@@ -449,7 +425,7 @@
                   <!-- Text input-->
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="control-label" for="email">Mail</label>
+                      <label class="control-label" for="email">Correo</label>
                       <input
                         id="email"
                         name="email"
