--- a/index.html
+++ b/index.html
@@ -65,37 +65,12 @@
                 <a class="flags" href="index.html">
                   <img src="images/idioma/mx.svg" alt="image" class="img-fluid" />
                 </a>
-                <a class="flags" href="us.html">
+                <a class="flags" href="en.html">
                   <img src="images/idioma/us.svg" alt="image" class="img-fluid" />
                 </a>
                 <a class="flags" href="fr.html">
                   <img src="images/idioma/fr.svg" alt="image" class="img-fluid" />
                 </a>
-                <!-- <div class="flags_item" href="i.html">
-                  <img src="images/idioma/mx.svg" alt="" href="index.html"/>
-                </div>
-                <div class="flags_item" href="us.html">
-                  <img src="images/idioma/us.svg" alt="" href="us.html"/>
-                </div>
-                <div class="flags_item flags_img" data_language="fr">
-                  <img src="images/idioma/fr.svg" alt="" />
-                </div> -->
-              </div>
-              <!-- <div class="flags flags_img flags_item mail-b">
-                <li data-lenguage="mx">
-                  <img src="images/idioma/mx.svg" alt="" />
-                </li>
-              </div>
-              <div class="flags flags_img flags_item mail-b">
-                <li data-lenguage="us">
-                  <img src="images/idioma/us.svg" alt="" />
-                </li>
-              </div>
-              <div class="flags flags_img flags_item mail-b">
-                <li data-lenguage="fr">
-                  <img src="images/idioma/fr.svg" alt="" />
-                </li>
-              </div> -->
             </div>
           </div>
           <div class="col-lg-6">
