--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                   patricia_isabel22@msn.com</a
                 >
               </div>
-              <div class="flags">
-                <a class="flags" href="index.html">
+              <div class="flags flags_item flags_img">
+                <a class="flags flags_item flags_img" href="index.html">
                   <img src="images/idioma/mx.svg" alt="image" class="img-fluid" />
                 </a>
-                <a class="flags" href="en.html">
+                <a class="flags flags_item flags_img" href="en.html">
                   <img src="images/idioma/us.svg" alt="image" class="img-fluid" />
                 </a>
-                <a class="flags" href="fr.html">
+                <a class="flags flags_item flags_img" href="fr.html">
                   <img src="images/idioma/fr.svg" alt="image" class="img-fluid" />
                 </a>
             </div>
