--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 ><span>Reserva una Cita</span></a
               >
               <div class="mail-b">
-                <a href="#"
+                <a class="new-btn-d br-2" href="#" target="_blank"
                   ><i class="fa fa-envelope-o" aria-hidden="true"></i>
                   patricia_isabel22@msn.com</a
                 >
