--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <div class="mail-b">
                 <a class="new-btn-d br-2" href="#" target="_blank"
                   ><i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  patricia_isabel22@msn.com</a
+                  patricia_isabel22@msn.com</span></a
                 >
               </div>
               <!-- <div class="flags flags_item flags_img">
