--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <span>patricia_isabel22@msn.com</span></a
                 >
               </div>
-              <!-- <div class="flags flags_item flags_img">
+              <div class="flags flags_item flags_img">
                 <a class="flags flags_item flags_img" href="index.html">
                   <img src="images/idioma/mx.svg" alt="image" class="img-fluid" />
                 </a>
@@ -71,7 +71,7 @@
                 <a class="flags flags_item flags_img" href="fr.html">
                   <img src="images/idioma/fr.svg" alt="image" class="img-fluid" />
                 </a>
-            </div> -->
+            </div>
           </div>
           <div class="col-lg-6">
             <div class="wel-nots">
