--- a/en.html
+++ b/en.html
@@ -45,40 +45,28 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="left-top">
-              <a class="new-btn-d br-2" href="Citas.html" target="_blank"
-                ><span>Book an Appointment</span></a
-              >
-              <div class="mail-b">
-                <a href="#"
-                  ><i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  patricia_isabel22@msn.com</a
-                >
-              </div>
-              <div class="flags flags_item flags_img">
-                <a class="flags flags_item flags_img" href="index.html">
-                  <img src="images/idioma/mx.svg" alt="image" class="img-fluid" />
-                </a>
-                <a class="flags flags_item flags_img" href="en.html">
-                  <img src="images/idioma/us.svg" alt="image" class="img-fluid" />
-                </a>
-                <a class="flags flags_item flags_img" href="fr.html">
-                  <img src="images/idioma/fr.svg" alt="image" class="img-fluid" />
-                </a>
+              <a class="new-btn-d br-2" href="Citas.html"><span>Reserva una Cita</span></a>
+              <div class="mail-b"><a href="mailto:patricia_isabel22@msn.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> patricia_isabel22@msn.com</a></div>
+              <a class="flags flags_item flags_img" href="Citas.html"><img src="images/idioma/mx.svg" alt="image" class="img-fluid" /></a>
+              <a class="flags flags_item flags_img" href="Citas.html"><img src="images/idioma/us.svg" alt="image" class="img-fluid" /></a>
+              <a class="flags flags_item flags_img" href="Citas.html"><img src="images/idioma/fr.svg" alt="image" class="img-fluid" /></a>
+  
             </div>
           </div>
           <div class="col-lg-6">
             <div class="wel-nots">
-              <p>Welcome: TO YOUR DOCTOR</p>
+              <p>Bienvenido: A TÚ MÉDICO</p>
             </div>
             <div class="right-top">
               <ul>
-                <li>
-                  <a
-                    href="https://www.facebook.com/profile.php?id=61556572522362"
-                    target="_blank"
-                    ><i class="fa fa-facebook" aria-hidden="true"></i
-                  ></a>
-                </li>
+                <li>                  <a
+                  href="https://www.facebook.com/profile.php?id=61556572522362"
+                  target="_blank"
+                  ><i class="fa fa-facebook" aria-hidden="true"></i
+                ></a></li>
+                <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li> -->
               </ul>
             </div>
           </div>
