--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<!-- End top bar -->
 
     <!-- Start top bar -->
-    <div class="main-top">
+    <!-- <div class="main-top">
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
@@ -127,7 +127,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End top bar -->
 
     <!-- Start header -->
