--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
   </head>
   <body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
     <!-- LOADER -->
-    <!-- <div id="preloader">
+    <div id="preloader">
 		<div class="loader">
 			<img src="images/preloader.gif" alt="" />
 		</div>
-    </div>end loader -->
+    </div>
     <!-- END LOADER -->
 
     	<!-- Start top bar -->
