--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 					<div class="left-top">
 						<a class="new-btn-d br-2" href="Citas.html"><span>Reserva una Cita</span></a>
 						<div class="mail-b"><a href="mailto:patricia_isabel22@msn.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> patricia_isabel22@msn.com</a></div>
-						<a class="flags flags_item flags_img" href="index.html"><img src="images/idioma/mx.svg" alt="image" class="img-fluid" /></a>
-						<a class="flags flags_item flags_img" href="en.html"><img src="images/idioma/us.svg" alt="image" class="img-fluid" /></a>
-						<a class="flags flags_item flags_img" href="fr.html"><img src="images/idioma/fr.svg" alt="image" class="img-fluid" /></a>
+						<a class="flags flags_item flags_img" href="Citas.html"><img src="images/idioma/mx.svg" alt="" /></a>
+						<a class="flags flags_item flags_img" href="Citas.html"><img src="images/idioma/us.svg" alt=""  /></a>
+						<a class="flags flags_item flags_img" href="Citas.html"><img src="images/idioma/fr.svg" alt="" /></a>>
 
 					</div>
 				</div>
