--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <!-- Basic -->
   <head>
     <meta charset="utf-8" />
@@ -40,47 +40,61 @@
   <body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
     <!-- LOADER -->
     <div id="preloader">
-		<div class="loader">
-			<img src="images/preloader.gif" alt="" />
-		</div>
+      <div class="loader">
+        <img src="images/preloader.gif" alt="" />
+      </div>
     </div>
     <!-- END LOADER -->
 
-    	<!-- Start top bar -->
-	<div class="main-top">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="left-top">
-						<a class="new-btn-d br-2" href="Citas.html"><span>Reserva una Cita</span></a>
-						<div class="mail-b"><a href="mailto:patricia_isabel22@msn.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> patricia_isabel22@msn.com</a></div>
-						<a class="flags flags_item flags_img" href="Citas.html"><img src="images/idioma/mx.svg" alt="" /></a>
-						<a class="flags flags_item flags_img" href="Citas.html"><img src="images/idioma/us.svg" alt=""  /></a>
-						<a class="flags flags_item flags_img" href="Citas.html"><img src="images/idioma/fr.svg" alt="" /></a>>
-
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="wel-nots">
-						<p>Bienvenido: A TÚ MÉDICO</p>
-					</div>
-					<div class="right-top">
-						<ul>
-							<li>                  <a
-                href="https://www.facebook.com/profile.php?id=61556572522362"
-                target="_blank"
-                ><i class="fa fa-facebook" aria-hidden="true"></i
-              ></a></li>
-							<!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+    <!-- Start top bar -->
+    <div class="main-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="left-top">
+              <a class="new-btn-d br-2" href="Citas.html"
+                ><span>Reserva una Cita</span></a
+              >
+              <div class="mail-b">
+                <a href="mailto:patricia_isabel22@msn.com"
+                  ><i class="fa fa-envelope-o" aria-hidden="true"></i>
+                  patricia_isabel22@msn.com</a
+                >
+              </div>
+              <a class="flags flags_item flags_img" href="Citas.html"
+                ><img src="images/idioma/mx.svg" alt=""
+              /></a>
+              <a class="flags flags_item flags_img" href="Citas.html"
+                ><img src="images/idioma/us.svg" alt=""
+              /></a>
+              <a class="flags flags_item flags_img" href="Citas.html"
+                ><img src="images/idioma/fr.svg" alt="" /></a
+              >>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="wel-nots">
+              <p>Bienvenido: A TÚ MÉDICO</p>
+            </div>
+            <div class="right-top">
+              <ul>
+                <li>
+                  <a
+                    href="https://www.facebook.com/profile.php?id=61556572522362"
+                    target="_blank"
+                    ><i class="fa fa-facebook" aria-hidden="true"></i
+                  ></a>
+                </li>
+                <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li> -->
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- End top bar -->
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End top bar -->
 
     <!-- Start top bar -->
     <!-- <div class="main-top">
