--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   patricia_isabel22@msn.com</a
                 >
               </div>
-              <a class="flags flags_item" href="index.html"
+              <!-- <a class="flags flags_item" href="index.html"
                 ><img src="images/idioma/mx.svg" alt=""
               /></a>
               <a class="flags flags_item" href="en.html"
@@ -69,7 +69,7 @@
               /></a>
               <a class="flags flags_item" href="fr.html"
                 ><img src="images/idioma/fr.svg" alt=""
-              /></a>
+              /></a> -->
             </div>
           </div>
           <div class="col-lg-6">
@@ -86,6 +86,17 @@
                   ></a>
                 </li>
               </ul>
+            </div>
+            <div class="btn-group" role="group" aria-label="Basic example">
+              <a class="flags flags_item flags_img" href="index.html"
+                ><img src="images/idioma/mx.svg" alt=""
+              /></a>
+              <a class="flags flags_item flags_img" href="en.html"
+                ><img src="images/idioma/us.svg" alt=""
+              /></a>
+              <a class="flags flags_item flags_img" href="fr.html"
+                ><img src="images/idioma/fr.svg" alt=""
+              /></a>
             </div>
           </div>
         </div>
@@ -876,10 +887,10 @@
             </p>
             <p class="footer-company-name">
               Médico, Cirujano y Partero Ced. Prof.
-              <a href="#" style="color: black">08789567</a> Médico Geriatra Ced
-              Prof. <a href="#" style="color: black">11652453</a> Maestra en
+              <a href="#" style="color: #A44289">08789567</a> Médico Geriatra Ced
+              Prof. <a href="#" style="color: #A44289">11652453</a> Maestra en
               Administración de Instituciones de Salud Ced. Prof.
-              <a href="#" style="color: black">13921433</a>
+              <a href="#" style="color: #A44289">13921433</a>
             </p>
           </div>
         </div>
