--- a/en.html
+++ b/en.html
@@ -200,7 +200,6 @@
                     myself for professional and personal growth.
                   </p>
                   <p>
-                    La
                     <span font size="6" style="color: black">Geriatrics</span>
                     It is the specialty of medicine dedicated to the study,
                     prevention, diagnosis, treatment and rehabilitation of
@@ -823,6 +822,7 @@
                   <i class="fa fa-volume-control-phone" aria-hidden="true"></i>
                 </div>
                 <div class="media-body dit-right">
+                  <h4>Telefonos</h4>
                   <a href="https://wa.me/522223592373" target="blank"
                     >22 2359 2373</a
                   ><br />
