--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                 </div>
                 <div class="media-body dit-right">
-                  <h4>Email</h4>
+                  <h4>Correo</h4>
                   <a href="mailto:patricia_isabel22@msn.com"
                     >patricia_isabel22@msn.com </a
                   ><br />
@@ -860,6 +860,7 @@
                   <i class="fa fa-volume-control-phone" aria-hidden="true"></i>
                 </div>
                 <div class="media-body dit-right">
+                  <h4>Teléfono</h4>
                   <a href="https://wa.me/522223592373" target="blank"
                     >22 2359 2373</a
                   ><br />
@@ -883,7 +884,7 @@
             <p class="footer-company-name">
               All Rights Reserved. &copy; 2024
               <a href="#">Dra. Patricia Geriatria</a> Design By :
-              <a href="#">AALVATECHNOLOGY</a>
+              <a href="#">AITECHNOLOGY</a>
             </p>
             <p class="footer-company-name">
               Médico, Cirujano y Partero Ced. Prof.
