--- a/fr.html
+++ b/fr.html
@@ -228,20 +228,20 @@
                   <p>
                     Mon objectif principal est d'appliquer mes connaissances et
                     mes compétences au profit de la population, en apportant
-                    qualité et chaleur dans les soins médicaux, en étant éthique
-                    et professionnel avec des valeurs pour effectuer mon travail
-                    de la meilleure façon possible ; me mettre à jour pour ma
-                    croissance professionnelle et personnelle.
+                    qualité et empathie dans les soins médicaux. L’éthique et le
+                    professionnalisme sont les valeurs essentielles pour
+                    effectuer mon travail de la meilleure façon possible.
+                    L’actualisation des connaissances médicales sont
+                    primordiales pour la croissance professionnelle, personnelle
+                    et l’efficacité.
                   </p>
                   <p>
                     La
                     <span font size="6" style="color: black">gériatrie</span>
-                    est la spécialité de médecine dédiée à l'étude, prévention,
-                    diagnostic, traitement et réadaptation des maladies dans
-                    <span font size="6" style="color: black"
-                      >personnes âgées</span
-                    >, ainsi qu'à la prévention primaire et à la détection des
-                    maladies dégénératives chroniques.
+                    est la spécialité de médecine dédiée à l'étude, la
+                    prévention, le diagnostic, le traitement et la réadaptation
+                    des maladies des aînés, ainsi qu'à la prévention primaire et
+                    à la détection des maladies dégénératives chroniques..
                   </p>
                   <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
@@ -277,7 +277,7 @@
               <h2>Services</h2>
               <p style="font-weight: bold; color: black">
                 Offrir une consultation gériatrique et une consultation générale
-                avec qualité et chaleur.
+                avec qualité et empathie.
               </p>
             </div>
           </div>
@@ -292,9 +292,7 @@
                     <i class="fa fa-h-square" aria-hidden="true"></i>
                   </div>
                   <h3 class="title">Soins De Consultation Générale</h3>
-                  <p style="font-weight: bold" class="description">
-                    • Diabète sucré
-                  </p>
+                  <p style="font-weight: bold" class="description">• Diabète</p>
                   <p style="font-weight: bold" class="description">
                     • Hypertension
                   </p>
@@ -338,7 +336,7 @@
                   </div>
                   <h3 class="title">Application de Botox</h3>
                   <p style="font-weight: bold" class="description">
-                    • Dans le tiers supérieur.
+                    • Dans le tiers supérieur du visage (front).
                   </p>
                   <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
@@ -436,7 +434,7 @@
             <div class="title-box">
               <h2>Rendez-vous</h2>
               <p style="font-weight: bold">
-                Remplissez ce petit formulaire pour planifier votre rendez-vous.
+                Remplissez ce formulaire pour planifier votre rendez-vous.
               </p>
             </div>
           </div>
@@ -564,7 +562,7 @@
                 </div>
                 <div class="feature feature-blurb-text">
                   <h4 class="feature-title">
-                    Adresse du bureau à Puebla : rendez-vous prévu
+                    Adresse du bureau à Puebla : sur rendez-vous prévu
                   </h4>
                   <div class="feature-content">
                     <p>
@@ -583,8 +581,8 @@
                   </h4>
                   <div class="feature-content">
                     <p>
-                      Playa del Carmen, Quintana Roo et collaboration en tant
-                      que médecin externe chez Amerimed
+                      Playa del Carmen, Quintana Roo en collaboeation avec les
+                      hopitaux privés du secteur.
                     </p>
                   </div>
                 </div>
@@ -602,12 +600,12 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="title-box">
-              <h2>Dr Patricia Isabel Flores Serrano. Médecin gériatrique</h2>
-              <h3>Médecin gériatrique</h3>
+              <h2>Dr Patricia Isabel Flores Serrano. Médecine gériatrique</h2>
+              <h3>Médecine gériatrique</h3>
               <p>Médecin, Chirurgien et Sage-femme Ced. Prof.08789567</p>
               <p>Médecin Gériatre Ced Prof. 11652453</p>
               <p>
-                Master en Administration des Institutions de Santé Ced.
+                Maitrise en Administration des Institutions de Santé Ced.
                 Prof.13921433
               </p>
             </div>
@@ -728,7 +726,7 @@
           <div class="col-lg-12">
             <div class="title-box">
               <h2>Contact</h2>
-              <p>Le patient est très important.</p>
+              <p>Le patient est notre priorité.</p>
             </div>
           </div>
         </div>
@@ -817,7 +815,7 @@
 
           <div class="col-lg-12 col-xs-12">
             <div class="left-contact">
-              <h2>Dirección</h2>
+              <h2>Nous joindre</h2>
               <div class="media cont-line">
                 <div class="media-left icon-b">
                   <i class="fa fa-location-arrow" aria-hidden="true"></i>
@@ -833,10 +831,7 @@
                     75219
                   </p>
                   <h4>Adresse Palya del Carmen "Consultation privée"</h4>
-                  <p>
-                    Playa del Carmen, Quintana Roo et collaboration en tant que
-                    médecin externe chez Amerimed
-                  </p>
+                  <p>Playa del Carmen, Quintana Roo</p>
                 </div>
               </div>
               <div class="media cont-line">
