--- a/en.html
+++ b/en.html
@@ -194,18 +194,16 @@
                   <h2>Professional Objective</h2>
                   <p>
                     My main objective is to apply my knowledge and skills for
-                    the benefit of the population, providing quality and warmth
+                    the benefit of the population, providing quality and emphaty
                     in medical care, being ethical and professional with values
                     ​​to perform my work in the best way possible; updating
                     myself for professional and personal growth.
                   </p>
                   <p>
                     <span font size="6" style="color: black">Geriatrics</span>
-                    It is the specialty of medicine dedicated to the study,
+                    is the specialty of medicine dedicated to the study,
                     prevention, diagnosis, treatment and rehabilitation of
-                    diseases in the
-                    <span font size="6" style="color: black">older adults</span
-                    >, as well as in the primary prevention and detection of
+                    diseases for elderly people, as well as primary prevention and detection of
                     chronic degenerative diseases.
                   </p>
                   <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
@@ -242,7 +240,7 @@
               <h2>Services</h2>
               <p style="font-weight: bold; color: black">
                 Provide geriatric and general consultation with quality and
-                warmth.
+                emphaty.
               </p>
             </div>
           </div>
@@ -264,8 +262,7 @@
                     • Hypertension
                   </p>
                   <p style="font-weight: bold" class="description">
-                    • infectious: respiratory, urinary, gastrointestinal, STD,
-                    etc.
+                    • infectious: respiratory, urinary, gastrointestinal, STD/STI.
                   </p>
                 </div>
               </div>
@@ -303,7 +300,7 @@
                   </div>
                   <h3 class="title">Botox application</h3>
                   <p style="font-weight: bold" class="description">
-                    • In the upper third.
+                    • In the Face (forehead).
                   </p>
                   <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
@@ -401,7 +398,7 @@
             <div class="title-box">
               <h2>Appointment</h2>
               <p style="font-weight: bold">
-                Fill out this short form to schedule your appointment.
+                Fill out this form to schedule your appointment.
               </p>
             </div>
           </div>
@@ -514,7 +511,7 @@
           <div class="col-lg-6 col-md-6">
             <div class="well-block">
               <div class="well-title">
-                <h2>Why Appointment with Us</h2>
+                <!-- <h2>Why Appointment with Us</h2> -->
               </div>
               <div class="feature-block">
                 <div class="feature feature-blurb-text">
@@ -528,7 +525,7 @@
                 </div>
                 <div class="feature feature-blurb-text">
                   <h4 class="feature-title">
-                    Office address in Puebla: Appointment scheduled
+                    Office address in Puebla: By appointment only
                   </h4>
                   <div class="feature-content">
                     <p>
@@ -547,8 +544,7 @@
                   </h4>
                   <div class="feature-content">
                     <p>
-                      Playa del Carmen, Quintana Roo and collaboration as an
-                      external doctor at Amerimed
+                      Playa del Carmen, Quintana Roo and in collaboration with local private hospitals.
                     </p>
                   </div>
                 </div>
@@ -692,7 +688,7 @@
           <div class="col-lg-12">
             <div class="title-box">
               <h2>Contact us</h2>
-              <p>The patient is very important.</p>
+              <p>The patient is our priority.</p>
             </div>
           </div>
         </div>
@@ -798,8 +794,7 @@
                   </p>
                   <h4>Address Playa del Carmen "Private Consultation"</h4>
                   <p>
-                    Playa del Carmen, Quintana Roo and collaboration as an
-                    external doctor at Amerimed
+                    Playa del Carmen, Quintana Roo
                   </p>
                 </div>
               </div>
