--- a/fr.html
+++ b/fr.html
@@ -298,7 +298,7 @@
                   </p>
                   <p style="font-weight: bold" class="description">
                     • contagieux : respiratoires, urinaires, Gastro-intestinal,
-                    MST, etc.
+                    MST/ITSS.
                   </p>
                 </div>
               </div>
@@ -562,7 +562,7 @@
                 </div>
                 <div class="feature feature-blurb-text">
                   <h4 class="feature-title">
-                    Adresse du bureau à Puebla : sur rendez-vous prévu
+                    Adresse du bureau à Puebla : sur rendez-vous
                   </h4>
                   <div class="feature-content">
                     <p>
@@ -581,7 +581,7 @@
                   </h4>
                   <div class="feature-content">
                     <p>
-                      Playa del Carmen, Quintana Roo en collaboeation avec les
+                      Playa del Carmen, Quintana Roo en collaboration avec les
                       hopitaux privés du secteur.
                     </p>
                   </div>
@@ -746,7 +746,7 @@
                         class="form-control"
                         id="name"
                         name="name"
-                        placeholder="Votre Num"
+                        placeholder="Votre Nom"
                         required
                         data-error="Please enter your name"
                       />
@@ -821,7 +821,7 @@
                   <i class="fa fa-location-arrow" aria-hidden="true"></i>
                 </div>
                 <div class="media-body dit-right">
-                  <h4>Adresse Puebla "Rendez-vous programmé"</h4>
+                  <h4>Adresse Puebla Sur rendez-vous.</h4>
                   <p>
                     Tour III Bureau « Hôpital Betania » 605 av. 20 Sur 705,
                     Colonel Azcárate
