--- a/fr.html
+++ b/fr.html
@@ -298,7 +298,7 @@
                   </p>
                   <p style="font-weight: bold" class="description">
                     • contagieux : respiratoires, urinaires, Gastro-intestinal,
-                    MST/ITSS.
+                    MTS/ITSS.
                   </p>
                 </div>
               </div>
