--- a/en.html
+++ b/en.html
@@ -203,8 +203,8 @@
                     <span font size="6" style="color: black">Geriatrics</span>
                     is the specialty of medicine dedicated to the study,
                     prevention, diagnosis, treatment and rehabilitation of
-                    diseases for elderly people, as well as primary prevention and detection of
-                    chronic degenerative diseases.
+                    diseases for elderly people, as well as primary prevention
+                    and detection of chronic degenerative diseases.
                   </p>
                   <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
@@ -262,7 +262,8 @@
                     • Hypertension
                   </p>
                   <p style="font-weight: bold" class="description">
-                    • infectious: respiratory, urinary, gastrointestinal, STD/STI.
+                    • infectious: respiratory, urinary, gastrointestinal,
+                    STD/STI.
                   </p>
                 </div>
               </div>
@@ -300,7 +301,7 @@
                   </div>
                   <h3 class="title">Botox application</h3>
                   <p style="font-weight: bold" class="description">
-                    • In the Face (forehead).
+                    • Forehead.
                   </p>
                   <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
@@ -544,7 +545,8 @@
                   </h4>
                   <div class="feature-content">
                     <p>
-                      Playa del Carmen, Quintana Roo and in collaboration with local private hospitals.
+                      Playa del Carmen, Quintana Roo and in collaboration with
+                      local private hospitals.
                     </p>
                   </div>
                 </div>
@@ -793,9 +795,7 @@
                     Pue. CP. 75219
                   </p>
                   <h4>Address Playa del Carmen "Private Consultation"</h4>
-                  <p>
-                    Playa del Carmen, Quintana Roo
-                  </p>
+                  <p>Playa del Carmen, Quintana Roo</p>
                 </div>
               </div>
               <div class="media cont-line">
@@ -817,7 +817,7 @@
                   <i class="fa fa-volume-control-phone" aria-hidden="true"></i>
                 </div>
                 <div class="media-body dit-right">
-                  <h4>Telefonos</h4>
+                  <h4>Phone</h4>
                   <a href="https://wa.me/522223592373" target="blank"
                     >22 2359 2373</a
                   ><br />
@@ -845,10 +845,10 @@
             </p>
             <p class="footer-company-name">
               Physician, Surgeon and Midwife, Ced. Prof.
-              <a href="#" style="color: #A44289">08789567</a> Geriatrician Ced
-              Prof. <a href="#" style="color: #A44289">11652453</a> Master in
+              <a href="#" style="color: #a44289">08789567</a> Geriatrician Ced
+              Prof. <a href="#" style="color: #a44289">11652453</a> Master in
               Health Institution Administration Prof. Ced..
-              <a href="#" style="color: #A44289">13921433</a>
+              <a href="#" style="color: #a44289">13921433</a>
             </p>
           </div>
         </div>
