--- a/fr.html
+++ b/fr.html
@@ -297,7 +297,7 @@
                     • Hypertension
                   </p>
                   <p style="font-weight: bold" class="description">
-                    • contagieux : respiratoires, urinaires, Gastro-intestinal,
+                    • Contagieux : respiratoires, urinaires, Gastro-intestinal,
                     MTS/ITSS.
                   </p>
                 </div>
@@ -577,7 +577,7 @@
                 </div>
                 <div class="feature feature-blurb-text">
                   <h4 class="feature-title">
-                    Consultation privée à domicile au :
+                    Consultation privée domicile au :
                   </h4>
                   <div class="feature-content">
                     <p>
@@ -600,9 +600,9 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="title-box">
-              <h2>Dr Patricia Isabel Flores Serrano. Médecine gériatrique</h2>
+              <h2>Dra. Patricia Isabel Flores Serrano. Médecine gériatrique</h2>
               <h3>Médecine gériatrique</h3>
-              <p>Médecin, Chirurgien et Sage-femme Ced. Prof.08789567</p>
+              <p>Médecin, Chirurgienne et Sage-femme Ced. Prof.08789567</p>
               <p>Médecin Gériatre Ced Prof. 11652453</p>
               <p>
                 Maitrise en Administration des Institutions de Santé Ced.
