--- a/fr.html
+++ b/fr.html
@@ -577,7 +577,7 @@
                 </div>
                 <div class="feature feature-blurb-text">
                   <h4 class="feature-title">
-                    Consultation privée domicile au :
+                    Consultation privée à domicile àu :
                   </h4>
                   <div class="feature-content">
                     <p>
