--- a/en.html
+++ b/en.html
@@ -196,7 +196,7 @@
                     My main objective is to apply my knowledge and skills for
                     the benefit of the population, providing quality and emphaty
                     in medical care, being ethical and professional with values
-                    ​​to perform my work in the best way possible; updating
+                    ​​ perform my work in the best way possible; updating
                     myself for professional and personal growth.
                   </p>
                   <p>
