--- a/fr.html
+++ b/fr.html
@@ -463,7 +463,7 @@
                   <!-- Text input-->
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="control-label" for="email">Mail</label>
+                      <label class="control-label" for="email">Courriel</label>
                       <input
                         id="email"
                         name="email"
@@ -757,7 +757,7 @@
                     <div class="form-group">
                       <input
                         type="text"
-                        placeholder="Votre e-mail"
+                        placeholder="Votre Courriel"
                         id="email"
                         class="form-control"
                         name="name"
