--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     • Hipertensión
                   </p>
                   <p style="font-weight: bold" class="description">
-                    • infecciosas: respiratorias, urinarias ,
+                    • Enfermedades infecciosas: respiratorias, urinarias ,
                     Gastrointestinales, ETS, etc.
                   </p>
                 </div>
@@ -561,7 +561,7 @@
                   </h4>
                   <div class="feature-content">
                     <p>Lunes - Viernes de 9:00 am / 17:00 hrs</p>
-                    <p>Sabado - Domingo solo UERGENCIAS</p>
+                    <p>Sabado - Domingo solo URGENCIAS</p>
                   </div>
                 </div>
                 <div class="feature feature-blurb-text">
@@ -585,8 +585,8 @@
                   </h4>
                   <div class="feature-content">
                     <p>
-                      Playa del Carmen, Quintana Roo y colaboración como médico
-                      externo en Amerimed
+                      Playa del Carmen, Quintana Roo y colaboración con
+                      hospitales privados en la zona.
                     </p>
                   </div>
                 </div>
@@ -836,8 +836,8 @@
                   </p>
                   <h4>Dirección Palya del Carmen "Consulta Privada"</h4>
                   <p>
-                    Playa del Carmen, Quintana Roo y colaboración como médico
-                    externo en Amerimed
+                    Playa del Carmen, Quintana Roo y en colaboración como médico
+                    externo en hospitales privados en la zona.
                   </p>
                 </div>
               </div>
@@ -888,10 +888,10 @@
             </p>
             <p class="footer-company-name">
               Médico, Cirujano y Partero Ced. Prof.
-              <a href="#" style="color: #A44289">08789567</a> Médico Geriatra Ced
-              Prof. <a href="#" style="color: #A44289">11652453</a> Maestra en
-              Administración de Instituciones de Salud Ced. Prof.
-              <a href="#" style="color: #A44289">13921433</a>
+              <a href="#" style="color: #a44289">08789567</a> Médico Geriatra
+              Ced Prof. <a href="#" style="color: #a44289">11652453</a> Maestra
+              en Administración de Instituciones de Salud Ced. Prof.
+              <a href="#" style="color: #a44289">13921433</a>
             </p>
           </div>
         </div>
